--- a/index.html
+++ b/index.html
@@ -63,15 +63,20 @@
 		<div class='title'> Robots can be <span id='fill'></span> </div>
 		<div class='row'>
 			<div class='col-sm'>
-				<h4> The 29th International Symposium on Robotics And Human Interactive Communication is coming soon to 
-					<span class='underline'>
-						<strong>New Delhi, India</strong>  
-					</span>	
-				</h4>
+				<h4> The 29th International Conference on Robotics And Human Interactive Communication </h4>
 			</div>
 			<div class='col-sm'>
 			</div>
-			
+		</div>
+		
+		<div class='row schedule'>
+			<div class='col-sm'>
+				<h4> 
+					<strong>
+					New Delhi, India  </br>
+					14 - 18 Oct, 2019 </strong>  
+				</h4>
+			</div>
 		</div>
 		
 	</div>
